--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -5,5 +5,7 @@
     <p>Made with ❤️ by The App Brewery</p>
   </div>
 </div>
+<!-- Bootstrap script -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
