--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,8 +5,7 @@
   <meta charset="utf-8">
   <title>Daily Journal</title>
   <meta charset="utf-8">
-  <!-- Bootstrap -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="/css/styles.css">
   <nav class="navbar navbar-default">
     <div class="container">
