Display posts on Home

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,4 +1,11 @@
-<%- include("./partials/header") %> 
-<h1>Hello world</h1>
-<p><%= homeStartingContent %> </p>
-<%- include("./partials/footer") %> 
+<%- include("./partials/header") %>
+  <h1>Hello world</h1>
+  <p>
+    <%= homeStartingContent %>
+  </p>
+  <% posts.forEach(e=> { %>
+    <h1><%= e.title%></h1>
+    <p><%=e.body%></p>
+  <%}) %>
+
+<%- include("./partials/footer") %>
