--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,8 +7,14 @@
     const length = 10;
     posts.forEach(e=> { %>
       <h1><%= e.title %></h1>
-      <%  const displayContent = e.body.length < length ? e.body : e.body.substring(0, length) + "..."; %>
-      <p><%= displayContent%></p>
-  <%}) %>
+      <%
+      const title = e.title;
+      const displayContent = e.body.length < length ? e.body : e.body.substring(0, length) + "..." %>
+      <p>
+        <%= displayContent%>
+        <a href="posts/<%=e.title %>">Read More</a>
+      </p>
+      
+      <%}) %>
 
 <%- include("./partials/footer") %>
